correction composants carousel + collapse

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -54,7 +54,7 @@
 /* Responsive styles for small devices */
 @media (max-width: 767.98px) {
   .card {
-    width: 335px;
+    width: 100%;
     height: 255px;
 
     .card__image {
